--- a/portfolio.html
+++ b/portfolio.html
@@ -356,16 +356,16 @@
               </div>
 
               <!-- Link Item -->
-              <div class="box-item f-link" data-date="2025-07-15">
+              <div class="box-item f-link" data-date="2023-09-04">
                 <div class="image">
                   <a
-                    href="https://example.com"
+                    href="https://heleenevers.netlify.app/"
                     class="has-popup-link"
                     target="_blank"
                   >
                     <img
-                      src="/assets/img/works/work5.jpg"
-                      alt="Love & Care Ceramic Bottles"
+                      src="https://heleenevers.netlify.app/assets/img/Extravers-logo_burn_new.jpg"
+                      alt="Old Website"
                     />
                     <span class="info">
                       <i class="ri-external-link-line"></i>
@@ -376,22 +376,22 @@
                   <div class="category">Link</div>
                   <a
                     target="_blank"
-                    href="https://example.com"
+                    href="https://heleenevers.netlify.app/"
                     class="name has-popup-link"
-                    >Love & Care Ceramic Bottles</a
+                    >Old Website</a
                   >
                 </div>
               </div>
 
               <!-- Music Item -->
-              <div class="box-item f-music" data-date="2025-07-16">
+              <div class="box-item f-music" data-date="2020-04-04">
                 <div class="image">
                   <a
                     href="https://api.soundcloud.com/tracks/790365085"
                     class="has-popup-music"
                   >
                     <img
-                      src="/assets/img/works/work6.jpg"
+                      src="https://i1.sndcdn.com/artworks-AuvKUjt2PBn82MMC-1gysZg-t500x500.jpg"
                       alt="The Sound Of FAH"
                     />
                     <span class="info">
@@ -413,26 +413,26 @@
               <div class="box-item f-image" data-date="2023-06-13">
                 <div class="image">
                   <a
-                    href="/assets/img/works/optimized/graphics/ballroom-planets-1200.jpg"
+                    href="/assets/img/optimized/works/graphics/ballroom-planets-1200.jpg"
                     class="has-popup-image"
                   >
                     <picture>
                       <source
                         srcset="
-                          /assets/img/works/optimized/graphics/ballroom-planets-600.webp 600w
+                          /assets/img/optimized/works/graphics/ballroom-planets-600.webp 600w
                         "
                         sizes="(max-width: 600px) 600px"
                         type="image/webp"
                       />
                       <source
                         srcset="
-                          /assets/img/works/optimized/graphics/ballroom-planets-600.jpg 600w
+                          /assets/img/optimized/works/graphics/ballroom-planets-600.jpg 600w
                         "
                         sizes="(max-width: 600px) 600px"
                         type="image/jpeg"
                       />
                       <img
-                        src="/assets/img/works/optimized/graphics/ballroom-planets-600.jpg"
+                        src="/assets/img/optimized/works/graphics/ballroom-planets-600.jpg"
                         alt="Reimagining a Sketch from Foil Arms & Hog with Gen-AI (Photoshop)"
                       />
                     </picture>
@@ -442,7 +442,7 @@
                 <div class="desc">
                   <div class="category">Image</div>
                   <a
-                    href="/assets/img/works/optimized/graphics/ballroom-planets-1200.jpg"
+                    href="/assets/img/optimized/works/graphics/ballroom-planets-1200.jpg"
                     class="name has-popup-image"
                   >
                     Gen-AI (PSD) Experiment
