Add blog posts + images, Change border colours

--- a/portfolio.html
+++ b/portfolio.html
@@ -267,8 +267,8 @@
                 <div class="image">
                   <a href="#content--pxl-esports" class="has-popup-content">
                     <img
-                      src="/assets/img/works/motion/pxl-esports-heroanimation.webm"
-                      alt="PXL Esports hero animation"
+                      src="/assets/img/works/motion/pxl-esports-loading.webp"
+                      alt="PXL Esports loading animation"
                     />
                     <span class="info">
                       <i class="ri-add-line"></i>
@@ -311,7 +311,7 @@
                 <div class="image">
                   <a href="#content--fah-toptencards" class="has-popup-content">
                     <img
-                      src="https://vumbnail.com/1111481401.jpg"
+                      src="/assets/img/works/motion/fah-topten-endcard.webp"
                       alt="Top Ten Card for Foil Arms & Hog"
                     />
                     <span class="info">
@@ -324,21 +324,21 @@
                   <a
                     href="#content--fah-toptencards"
                     class="name has-popup-content"
-                    >Customisable Card & Titles (FAH)</a
+                    >Customisable Card & Lower Thirds (FAH)</a
                   >
                 </div>
               </div>
 
               <!-- Video Item -->
-              <div class="box-item f-video" data-date="2025-07-14">
+              <div class="box-item f-video" data-date="2021-01-18">
                 <div class="image">
                   <a
-                    href="https://youtu.be/S4L8T2kFFck"
+                    href="https://youtu.be/eygeYxxHBAY"
                     class="has-popup-video"
                   >
                     <img
-                      src="/assets/img/works/work4.jpg"
-                      alt="Coffee Cup In Hand"
+                      src="https://img.youtube.com/vi/eygeYxxHBAY/mqdefault.jpg"
+                      alt="Rock This Sketch! A Foil Arms & Hog fan edit celebrating my favourite sketches."
                     />
                     <span class="info">
                       <i class="ri-play-circle-line"></i>
@@ -348,9 +348,9 @@
                 <div class="desc">
                   <div class="category">Video</div>
                   <a
-                    href="https://youtu.be/S4L8T2kFFck"
+                    href="https://youtu.be/eygeYxxHBAY"
                     class="name has-popup-video"
-                    >Coffee Cup In Hand</a
+                    >Rock This Sketch! (Foil Arms & Hog fan edit)</a
                   >
                 </div>
               </div>
@@ -364,8 +364,8 @@
                     target="_blank"
                   >
                     <img
-                      src="https://heleenevers.netlify.app/assets/img/Extravers-logo_burn_new.jpg"
-                      alt="Old Website"
+                      src="/assets/img/works/graphics/oldwebsite-hero.webp"
+                      alt="Old Website Hero Animation"
                     />
                     <span class="info">
                       <i class="ri-external-link-line"></i>
@@ -623,8 +623,8 @@
         <span class="popup-close-inner close"></span>
         <div
           class="image video-preview"
-          data-video-id="1111481401"
-          data-video-provider="vimeo"
+          data-video-id="iUR2BskcApo"
+          data-video-provider="youtube"
           data-start-time="0"
         >
           <div
@@ -641,16 +641,48 @@
         <div class="desc">
           <div class="category">Content</div>
           <h4>
-            Top Ten Interstitial Cards & Lower Thirds for Foil Arms and Hog
+            Customisable Interstitial Cards & Lower Thirds for Foil Arms and
+            Hog's Top Ten Sketch Review
           </h4>
           <div class="single-post-text">
-            <p>Paragraph.</p>
+            <p>
+              Sketch comedy trio Foil Arms & Hog, who put out weekly sketches on
+              YouTube, premiered a 'top ten review' of their own favourite work
+              to close the decade in 2019. I was a new fan of theirs then, but
+              by the end of 2020 I had already been hired to do motion graphics
+              for them so I suggested they might like to have custom-made titles
+              for their 2020 review episode.
+            </p>
+            <p>
+              I only had a couple of days, so I presented a fairly 'minimal' set
+              of lower thirds motion graphics template (.mogrt) to choose from
+              and they used those for 2020 and 2021. But for 2022 I approached
+              them again, offering them a different direction. I felt my skills
+              had progressed a lot since my first attempt and they should
+              benefit from it, and besides it never hurts to try. They've been
+              using this version ever since.
+            </p>
+            <p>The main strenghts of the new edition:</p>
             <ul>
-              <li>List item.</li>
-              <li>List item.</li>
-              <li>List item.</li>
+              <li>
+                A more playful, eye-catching 'sketchy' visual style, built in
+                Illustrator.
+              </li>
+              <li>
+                More options for customisation, among which ten different 'pig
+                piece drops'.
+              </li>
+              <li>
+                Thorough testing to accommodate for title lenght differences.
+              </li>
+              <li>
+                Future-proofing artwork in 6K with the option to scale down.
+              </li>
             </ul>
-            <p>Paragraph.</p>
+            <p>
+              I'll talk more about my process, design decisions and motion
+              techniques in the dedicated blog post.
+            </p>
           </div>
           <a
             href="/posts/fah-topten-mogrts.html"
