Add favicon light and dark mode

--- a/index.html
+++ b/index.html
@@ -30,7 +30,17 @@
     />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/assets/images/favicons/favicon.ico" />
+    <link
+      rel="icon"
+      href="/assets/images/favicons/favicon-light.ico"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      rel="icon"
+      href="/assets/images/favicons/favicon-dark.ico"
+      media="(prefers-color-scheme: dark)"
+    />
+    <!-- <link rel="icon" href="/assets/images/favicons/favicon.ico" /> -->
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="/assets/css/style.css" />
