--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
       href="/assets/images/favicons/favicon-dark.ico"
       media="(prefers-color-scheme: dark)"
     />
-    <!-- <link rel="icon" href="/assets/images/favicons/favicon.ico" /> -->
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <!-- Glitch Effect -->
-    <link rel="stylesheet" href="/assets/css/glitch-simple.css" />
+    <link rel="stylesheet" href="/assets/css/glitch.css" />
+    <link rel="stylesheet" href="/assets/css/glitch-rgb.css" />
   </head>
 
   <body class="homepage">
@@ -70,7 +70,7 @@
         <!-- Started Section -->
         <div class="section started">
           <div class="started-content">
-            <div class="h-title glitch-effect" data-text="Heleen Evers">
+            <div class="h-title glitch-rgb" data-text="Heleen Evers">
               Heleen Evers
             </div>
 
@@ -88,10 +88,10 @@
       <div id="footer-container"></div>
 
       <!-- Border Lines -->
-      <div class="line top"></div>
-      <div class="line bottom"></div>
       <div class="line left"></div>
       <div class="line right"></div>
+      <div class="line top"></div>
+      <div class="line bottom"></div>
     </div>
 
     <!-- Sidebar placeholder -->
