--- a/resume.html
+++ b/resume.html
@@ -30,14 +30,24 @@
     />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/assets/images/favicons/favicon.ico" />
+    <link
+      rel="icon"
+      href="/assets/images/favicons/favicon-light.ico"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      rel="icon"
+      href="/assets/images/favicons/favicon-dark.ico"
+      media="(prefers-color-scheme: dark)"
+    />
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/resume.css" />
 
     <!-- Glitch Effect -->
-    <link rel="stylesheet" href="/assets/css/glitch-simple.css" />
+    <link rel="stylesheet" href="/assets/css/glitch.css" />
+    <link rel="stylesheet" href="/assets/css/glitch-rgb.css" />
   </head>
 
   <body>
@@ -61,7 +71,7 @@
         <!-- Started Section -->
         <div class="section started">
           <div class="started-content">
-            <div class="h-title glitch-effect" data-text="Resume">Resume</div>
+            <div class="h-title glitch-rgb" data-text="Resume">Resume</div>
 
             <!-- Hidden source text for typing -->
             <div class="h-subtitle typing-bread" style="display: none">
@@ -838,10 +848,10 @@
       <div id="footer-container"></div>
 
       <!-- Border Lines -->
-      <div class="line top"></div>
-      <div class="line bottom"></div>
       <div class="line left"></div>
       <div class="line right"></div>
+      <div class="line top"></div>
+      <div class="line bottom"></div>
     </div>
 
     <!-- Sidebar placeholder -->
