--- a/portfolio.html
+++ b/portfolio.html
@@ -231,8 +231,8 @@
                 <div class="image">
                   <a href="#gallery--fah-endcards" class="has-popup-gallery">
                     <img
-                      src="/assets/img/works/motion/fah-toptencard.webm"
-                      alt="Foil Arms and Hog Top 10 Sketches for 2022"
+                      src="/assets/img/works/motion/fah-thursdaysketch-blue.webp"
+                      alt="Foil Arms & Hog's Blue Animated End Card"
                     />
                     <span class="info">
                       <i class="ri-multi-image-line"></i>
@@ -244,7 +244,7 @@
                   <a
                     href="#gallery--fah-endcards"
                     class="name has-popup-gallery"
-                    >End Card Motion Graphics (FAH)</a
+                    >End Card Motion Graphics for Foil Arms & Hog</a
                   >
                 </div>
               </div>
@@ -268,6 +268,29 @@
                     href="#gallery--ae-experiments"
                     class="name has-popup-gallery"
                     >After Effects Experiments</a
+                  >
+                </div>
+              </div>
+
+              <!-- Content Item -->
+              <div class="box-item f-content" data-date="2024-05-11">
+                <div class="image">
+                  <a href="#content--ixd-efteling" class="has-popup-content">
+                    <img
+                      src="/assets/img/works/motion/idx-efteling.webp"
+                      alt="Interactive Titles in the 'Efteling' Mockup (Interaction Design)"
+                    />
+                    <span class="info">
+                      <i class="ri-add-line"></i>
+                    </span>
+                  </a>
+                </div>
+                <div class="desc">
+                  <div class="category">Content</div>
+                  <a
+                    href="#content--ixd-efteling"
+                    class="name has-popup-content"
+                    >Interactive Titles in 'De Efteling' Mockup</a
                   >
                 </div>
               </div>
@@ -298,7 +321,7 @@
                 <div class="image">
                   <a href="#content--fah-squatters" class="has-popup-content">
                     <img
-                      src="assets/img/works/motion/fah-quatters-titles-thumbnail.webp"
+                      src="assets/img/works/motion/fah-squatters.webp"
                       alt="Title Sequence for Squatters"
                     />
                     <span class="info">
@@ -519,8 +542,8 @@
       style="display: none"
     >
       <a
-        href="/assets/img/works/motion/fah-toptencard.webm"
-        title="Top 10 Intro/Outro Card"
+        href="/assets/img/works/motion/fah-thursdaysketch-blue.webm"
+        title="Foil Arms & Hog Animated End Card"
       ></a>
     </div>
 
@@ -533,6 +556,10 @@
       <a
         href="/assets/img/works/motion/ae-experiments-rgbounce.webm"
         title="Bouncing Ball with RGB Shift. Quick classroom project."
+      ></a>
+      <a
+        href="/assets/img/works/motion/ee-heart-flame.webm"
+        title="Animation of an old personal branding experiment."
       ></a>
     </div>
 
@@ -572,6 +599,42 @@
             data-text="View Project"
             >View Project</a
           >
+        </div>
+      </div>
+    </div>
+
+    <!-- PXL Esports Project -->
+    <div id="content--ixd-efteling" style="display: none">
+      <div class="popup-box">
+        <!-- <button class="popup-close-inner" type="button" title="Close">
+          &times;
+        </button> -->
+        <span class="popup-close-inner close"></span>
+        <div class="image">
+          <img
+            src="/assets/img/works/motion/idx-efteling.webp"
+            alt="PXL Esports hero animation"
+          />
+        </div>
+        <div class="desc">
+          <div class="category">Content</div>
+          <h4>Interactive titles in themepark De Efteling (Mockup)</h4>
+          <div class="single-post-text">
+            <p>Paragraph.</p>
+            <ul>
+              <li>List item.</li>
+              <li>List item.</li>
+              <li>List item.</li>
+            </ul>
+            <p>Paragraph.</p>
+          </div>
+          <!-- <a
+            href="#"
+            target="_blank"
+            class="btn"
+            data-text="View Project"
+            >View Project</a
+          > -->
         </div>
       </div>
     </div>
