--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
             >
               <canvas id="game" width="1280" height="720"></canvas>
             </div>
+            <!-- Only shown below 840px -->
+            <div id="mobile-controls">
+              <button data-action="left">⟵</button>
+              <button data-action="rotate">⟳</button>
+              <button data-action="right">⟶</button>
+              <button data-action="drop">⟱</button>
+            </div>
             <div class="hud">
               <div class="stats">
                 <div class="pill">Score: <strong id="score">0</strong></div>
