Add tag and category automation to update nav script + blog post template tweaks

--- a/resume.html
+++ b/resume.html
@@ -566,39 +566,61 @@
                     </p>
                   </div>
                   <div class="icons">
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/a/af/Adobe_Photoshop_CC_icon.svg"
-                      alt="Photoshop"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/b/b6/Adobe_Photoshop_Lightroom_CC_logo.svg"
-                      alt="Lightroom"
-                    />
+                    <a
+                      title="Adobe Inc., Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Adobe_Photoshop_CC_icon.svg"
+                      ><img
+                        width="512"
+                        alt="Logo of the digital imaging program, Adobe Photoshop"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Adobe_Photoshop_CC_icon.svg/512px-Adobe_Photoshop_CC_icon.svg.png?20200616073617"
+                    /></a>
+                    <a
+                      title="Adobe Systems, Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Adobe_Photoshop_Lightroom_CC_logo.svg"
+                      ><img
+                        width="512"
+                        alt="Adobe Photoshop Lightroom CC icon"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b6/Adobe_Photoshop_Lightroom_CC_logo.svg/512px-Adobe_Photoshop_Lightroom_CC_logo.svg.png?20200616120137"
+                    /></a>
                   </div>
                 </li>
                 <li data-percentage="80">
-                  <div class="name">Video Editing and Post Production</div>
+                  <div class="name">Video Editing & Finalising</div>
                   <div class="progress">
                     <div class="percentage">
                       <span class="percent">80%</span>
                     </div>
                   </div>
                   <div class="context">
-                    <p>More context coming up soon!</p>
+                    <p>
+                      When I first learned about videography I was working with
+                      footage shot on DVCAM with Sony DSR shoulder camcorders. I
+                      took my first editing steps in Premiere Pro CS5, Final Cut
+                      Pro and Avid. Besides that I did camera work for live
+                      captures, and occasionally grading and titles.
+                    </p>
+                    <p>
+                      I'm now a confident editor, always keeping up with new
+                      software developments (mostly Adobe Premiere Pro).
+                    </p>
                   </div>
                   <div class="icons">
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Adobe_After_Effects_CC_icon.svg"
-                      alt="After Effects"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/4/40/Adobe_Premiere_Pro_CC_icon.svg"
-                      alt="Premiere Pro"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/0/0e/Logo_DavinciResolve_Simple.svg"
-                      alt="Davinci Resolve"
-                    />
+                    <a
+                      title="™/®Adobe Inc., Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Adobe_After_Effects_CC_icon.svg"
+                      ><img
+                        width="512"
+                        alt="After effect logo svg"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Adobe_After_Effects_CC_icon.svg/512px-Adobe_After_Effects_CC_icon.svg.png?20210519030120"
+                    /></a>
+                    <a
+                      title="Asav/Blackmagic Design, Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:DaVinci_Resolve_17_logo.svg"
+                      ><img
+                        width="64"
+                        alt="Sawmy"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/90/DaVinci_Resolve_17_logo.svg/64px-DaVinci_Resolve_17_logo.svg.png?20211228192035"
+                    /></a>
                   </div>
                 </li>
                 <li data-percentage="80">
@@ -612,14 +634,22 @@
                     <p>More context coming up soon!</p>
                   </div>
                   <div class="icons">
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/4/40/Adobe_Premiere_Pro_CC_icon.svg"
-                      alt="Premiere Pro"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Blender_logo_no_text.svg"
-                      alt="Blender"
-                    />
+                    <a
+                      title="Adobe Inc., Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Adobe_Premiere_Pro_CC_icon.svg"
+                      ><img
+                        width="512"
+                        alt="AQUILA Game Reserce"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Adobe_Premiere_Pro_CC_icon.svg/512px-Adobe_Premiere_Pro_CC_icon.svg.png?20210729021549"
+                    /></a>
+                    <a
+                      title="™/®Blender Foundation, Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Blender_logo_no_text.svg"
+                      ><img
+                        width="512"
+                        alt='The symbol of Blender without the caption "Blender" next to it.'
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0c/Blender_logo_no_text.svg/512px-Blender_logo_no_text.svg.png?20210507122249"
+                    /></a>
                   </div>
                 </li>
                 <li data-percentage="50">
@@ -633,18 +663,22 @@
                     <p>More context coming up soon!</p>
                   </div>
                   <div class="icons">
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/3/33/Figma-logo.svg"
-                      alt="Figma"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/c/c2/Adobe_XD_CC_icon.svg"
-                      alt="Adobe XD"
-                    />
-                    <img
-                      src="https://framerusercontent.com/images/3zFbB2jdDFJ02sWnh7hLRZFujk.svg"
-                      alt="Rive"
-                    />
+                    <a
+                      title="Figma, Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Figma-logo.svg"
+                      ><img
+                        width="256"
+                        alt="Figma-logo"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Figma-logo.svg/256px-Figma-logo.svg.png?20250625151003"
+                    /></a>
+                    <a
+                      title="™/®Adobe Systems, Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Adobe_XD_CC_icon.svg"
+                      ><img
+                        width="512"
+                        alt="Adobe XD CC icon"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c2/Adobe_XD_CC_icon.svg/512px-Adobe_XD_CC_icon.svg.png?20210729021535"
+                    /></a>
                   </div>
                 </li>
                 <li data-percentage="40">
@@ -668,26 +702,46 @@
                     <p>I'm just beginning to learn Vue and React.</p>
                   </div>
                   <div class="icons">
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg"
-                      alt="HTML"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"
-                      alt="CSS"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Javascript-shield.svg"
-                      alt="JavaScript"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/9/95/Vue.js_Logo_2.svg"
-                      alt="Vue"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/3/30/React_Logo_SVG.svg"
-                      alt="React"
-                    />
+                    <a
+                      title="W3C, CC BY 3.0 &lt;https://creativecommons.org/licenses/by/3.0&gt;, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:HTML5_logo_and_wordmark.svg"
+                      ><img
+                        width="512"
+                        alt="Official logo of HTML5 since April 2011"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/61/HTML5_logo_and_wordmark.svg/512px-HTML5_logo_and_wordmark.svg.png?20170517184425"
+                    /></a>
+                    <a
+                      title="Nikotaf, CC BY-SA 4.0 &lt;https://creativecommons.org/licenses/by-sa/4.0&gt;, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:CSS.3.svg"
+                      ><img
+                        width="256"
+                        alt="CSS.3"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/CSS.3.svg/256px-CSS.3.svg.png?20160504153216"
+                    /></a>
+                    <a
+                      title="Omed Habib, Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Javascript-shield.svg"
+                      ><img
+                        width="256"
+                        alt="Javascript-shield"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Javascript-shield.svg/256px-Javascript-shield.svg.png?20180912181046"
+                    /></a>
+                    <a
+                      title="Evan You, https://github.com/yyx990803, CC BY 4.0 &lt;https://creativecommons.org/licenses/by/4.0&gt;, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Vue.js_Logo_2.svg"
+                      ><img
+                        width="512"
+                        alt="Vue.js Logo"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Vue.js_Logo_2.svg/512px-Vue.js_Logo_2.svg.png?20170919082558"
+                    /></a>
+                    <a
+                      title="Meta Platforms, Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:React_Logo_SVG.svg"
+                      ><img
+                        width="512"
+                        alt="React Logomark SVG"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/React_Logo_SVG.svg/512px-React_Logo_SVG.svg.png?20231112063719"
+                    /></a>
                   </div>
                 </li>
                 <li data-percentage="30">
@@ -713,17 +767,33 @@
                     </p>
                   </div>
                   <div class="icons">
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Ads_logo.svg"
-                      alt="Google Ads"
-                    />
-                    <img
-                      src="https://upload.wikimedia.org/wikipedia/commons/0/08/Pinterest-logo.png"
-                      alt="Pinterest"
-                    />
+                    <a
+                      title="Google, Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Google_Ads_icon.svg"
+                      ><img
+                        width="512"
+                        alt="Google Ads icon"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cc/Google_Ads_icon.svg/512px-Google_Ads_icon.svg.png?20231024090931"
+                    /></a>
+                    <a
+                      title="The Pink Group, Public domain, via Wikimedia Commons"
+                      href="https://commons.wikimedia.org/wiki/File:Pinterest_circle.svg"
+                      ><img
+                        width="512"
+                        alt="Pinterest circle"
+                        src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/17/Pinterest_circle.svg/512px-Pinterest_circle.svg.png?20140819083530"
+                    /></a>
                     <img
                       src="https://upload.wikimedia.org/wikipedia/commons/9/95/Instagram_logo_2022.svg"
                       alt="Instagram"
+                    />
+                    <img
+                      src="https://upload.wikimedia.org/wikipedia/commons/8/84/Zapier-logo.png"
+                      alt="Zapier"
+                    />
+                    <img
+                      src="https://cdn.brandfetch.io/idx0-igWI5/w/400/h/400/theme/dark/icon.jpeg"
+                      alt="Mailchimp"
                     />
                   </div>
                 </li>
@@ -802,7 +872,10 @@
                         src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Perplexity_AI_logo.svg"
                         alt="Perplexity"
                       />
-                      <img src="" alt="" />
+                      <img
+                        src="https://upload.wikimedia.org/wikipedia/commons/e/ef/ChatGPT-Logo.svg"
+                        alt="ChatGPT"
+                      />
                     </div>
                   </div>
                 </li>
