--- a/portfolio.html
+++ b/portfolio.html
@@ -567,12 +567,9 @@
 
     <!-- CONTENT -->
 
-    <!-- PXL Esports Project -->
     <div id="content--pxl-esports" style="display: none">
       <div class="popup-box">
-        <!-- <button class="popup-close-inner" type="button" title="Close">
-          &times;
-        </button> -->
+        <span class="popup-close-top close"></span>
         <span class="popup-close-inner close"></span>
         <div class="image">
           <img
@@ -603,12 +600,9 @@
       </div>
     </div>
 
-    <!-- PXL Esports Project -->
     <div id="content--ixd-efteling" style="display: none">
       <div class="popup-box">
-        <!-- <button class="popup-close-inner" type="button" title="Close">
-          &times;
-        </button> -->
+        <span class="popup-close-top close"></span>
         <span class="popup-close-inner close"></span>
         <div class="image">
           <img
@@ -641,9 +635,7 @@
 
     <div id="content--fah-squatters" style="display: none">
       <div class="popup-box">
-        <!-- <button class="popup-close-inner" type="button" title="Close">
-          &times;
-        </button> -->
+        <span class="popup-close-top close"></span>
         <span class="popup-close-inner close"></span>
         <div
           class="image video-preview"
@@ -690,9 +682,7 @@
 
     <div id="content--fah-toptencards" style="display: none">
       <div class="popup-box">
-        <!-- <button class="popup-close-inner" type="button" title="Close">
-          &times;
-        </button> -->
+        <span class="popup-close-top close"></span>
         <span class="popup-close-inner close"></span>
         <div
           class="image video-preview"
