--- a/resume.html
+++ b/resume.html
@@ -98,13 +98,7 @@
               <div class="title_inner">About Me</div>
             </div>
             <div class="about-content">
-              <div class="image">
-                <img
-                  src="/assets/images/profilepic300.jpg"
-                  alt="Heleen Evers"
-                />
-              </div>
-
+              <div class="profilepic"></div>
               <div class="desc">
                 <p>
                   <strong>Hello! My name is Heleen </strong> (pron. Hey-Lane)
@@ -129,7 +123,6 @@
                     <li><strong>E-mail:</strong> heleen.evers@gmail.com</li>
                   </ul>
                 </div>
-
                 <div class="bts noprint">
                   <a
                     target="_blank"
