--- a/index.html
+++ b/index.html
@@ -77,6 +77,195 @@
               Heleen Evers
             </div>
 
+            <div class="he-logo">
+              <svg
+                class="glitch-rgb"
+                viewBox="-30 0 500 485"
+                overflow="visible"
+                xmlns="http://www.w3.org/2000/svg"
+                aria-label="HE Logo"
+              >
+                <defs>
+                  <!-- Base logo shape -->
+                  <g id="he-shape">
+                    <path
+                      d="M143.89,273.81h229.02s0-71.95,0-71.95c-46.55,0-184.7,0-229.02,0v-127.91h48.64V0H0v73.95h53.3v337.77H0v73.28h192.53v-73.28h-48.63v-137.9Z"
+                    />
+                    <polygon
+                      points="352.26 140.57 435.54 140.57 435.54 0 277.79 0 277.79 73.95 352.26 73.95 352.26 140.57"
+                    />
+                    <polygon
+                      points="360.27 339.1 354.88 411.72 277.8 411.72 277.8 485 432.21 485 443.54 339.1 360.27 339.1"
+                    />
+                  </g>
+
+                  <!-- Clip slices (thin for scanlines) -->
+                  <clipPath id="slice-1">
+                    <rect y="0" width="100%" height="11%" />
+                  </clipPath>
+                  <clipPath id="slice-2">
+                    <rect y="11%" width="100%" height="2%" />
+                  </clipPath>
+                  <clipPath id="slice-3">
+                    <rect y="13%" width="100%" height="7%" />
+                  </clipPath>
+                  <clipPath id="slice-4">
+                    <rect y="20%" width="100%" height="8%" />
+                  </clipPath>
+                  <clipPath id="slice-5">
+                    <rect y="28%" width="100%" height="6%" />
+                  </clipPath>
+                  <clipPath id="slice-6">
+                    <rect y="34%" width="100%" height="10%" />
+                  </clipPath>
+                  <clipPath id="slice-7">
+                    <rect y="44%" width="100%" height="2%" />
+                  </clipPath>
+                  <clipPath id="slice-8">
+                    <rect y="46%" width="100%" height="8%" />
+                  </clipPath>
+                  <clipPath id="slice-9">
+                    <rect y="54%" width="100%" height="11%" />
+                  </clipPath>
+                  <clipPath id="slice-10">
+                    <rect y="65%" width="100%" height="8%" />
+                  </clipPath>
+                  <clipPath id="slice-11">
+                    <rect y="73%" width="100%" height="14%" />
+                  </clipPath>
+                  <clipPath id="slice-12">
+                    <rect y="87%" width="100%" height="3%" />
+                  </clipPath>
+                  <clipPath id="slice-13">
+                    <rect y="90%" width="100%" height="10%" />
+                  </clipPath>
+                </defs>
+
+                <!-- Orange / red slices -->
+                <g class="orange-slice1">
+                  <use href="#he-shape" clip-path="url(#slice-1)" />
+                </g>
+                <g class="orange-slice2">
+                  <use href="#he-shape" clip-path="url(#slice-2)" />
+                </g>
+                <g class="orange-slice3">
+                  <use href="#he-shape" clip-path="url(#slice-3)" />
+                </g>
+                <g class="orange-slice4">
+                  <use href="#he-shape" clip-path="url(#slice-4)" />
+                </g>
+                <g class="orange-slice5">
+                  <use href="#he-shape" clip-path="url(#slice-5)" />
+                </g>
+                <g class="orange-slice6">
+                  <use href="#he-shape" clip-path="url(#slice-6)" />
+                </g>
+                <g class="orange-slice7">
+                  <use href="#he-shape" clip-path="url(#slice-7)" />
+                </g>
+                <g class="orange-slice8">
+                  <use href="#he-shape" clip-path="url(#slice-8)" />
+                </g>
+                <g class="orange-slice9">
+                  <use href="#he-shape" clip-path="url(#slice-9)" />
+                </g>
+                <g class="orange-slice10">
+                  <use href="#he-shape" clip-path="url(#slice-10)" />
+                </g>
+                <g class="orange-slice11">
+                  <use href="#he-shape" clip-path="url(#slice-11)" />
+                </g>
+                <g class="orange-slice12">
+                  <use href="#he-shape" clip-path="url(#slice-12)" />
+                </g>
+                <g class="orange-slice13">
+                  <use href="#he-shape" clip-path="url(#slice-13)" />
+                </g>
+
+                <!-- Cyan / teal slices -->
+                <g class="teal-slice1">
+                  <use href="#he-shape" clip-path="url(#slice-1)" />
+                </g>
+                <g class="teal-slice2">
+                  <use href="#he-shape" clip-path="url(#slice-2)" />
+                </g>
+                <g class="teal-slice3">
+                  <use href="#he-shape" clip-path="url(#slice-3)" />
+                </g>
+                <g class="teal-slice4">
+                  <use href="#he-shape" clip-path="url(#slice-4)" />
+                </g>
+                <g class="teal-slice5">
+                  <use href="#he-shape" clip-path="url(#slice-5)" />
+                </g>
+                <g class="teal-slice6">
+                  <use href="#he-shape" clip-path="url(#slice-6)" />
+                </g>
+                <g class="teal-slice7">
+                  <use href="#he-shape" clip-path="url(#slice-7)" />
+                </g>
+                <g class="teal-slice8">
+                  <use href="#he-shape" clip-path="url(#slice-8)" />
+                </g>
+                <g class="teal-slice9">
+                  <use href="#he-shape" clip-path="url(#slice-9)" />
+                </g>
+                <g class="teal-slice10">
+                  <use href="#he-shape" clip-path="url(#slice-10)" />
+                </g>
+                <g class="teal-slice11">
+                  <use href="#he-shape" clip-path="url(#slice-11)" />
+                </g>
+                <g class="teal-slice12">
+                  <use href="#he-shape" clip-path="url(#slice-12)" />
+                </g>
+                <g class="teal-slice13">
+                  <use href="#he-shape" clip-path="url(#slice-13)" />
+                </g>
+
+                <!-- Base / black slices -->
+                <g class="base-slice1">
+                  <use href="#he-shape" clip-path="url(#slice-1)" />
+                </g>
+                <g class="base-slice2">
+                  <use href="#he-shape" clip-path="url(#slice-2)" />
+                </g>
+                <g class="base-slice3">
+                  <use href="#he-shape" clip-path="url(#slice-3)" />
+                </g>
+                <g class="base-slice4">
+                  <use href="#he-shape" clip-path="url(#slice-4)" />
+                </g>
+                <g class="base-slice5">
+                  <use href="#he-shape" clip-path="url(#slice-5)" />
+                </g>
+                <g class="base-slice6">
+                  <use href="#he-shape" clip-path="url(#slice-6)" />
+                </g>
+                <g class="base-slice7">
+                  <use href="#he-shape" clip-path="url(#slice-7)" />
+                </g>
+                <g class="base-slice8">
+                  <use href="#he-shape" clip-path="url(#slice-8)" />
+                </g>
+                <g class="base-slice9">
+                  <use href="#he-shape" clip-path="url(#slice-9)" />
+                </g>
+                <g class="base-slice10">
+                  <use href="#he-shape" clip-path="url(#slice-10)" />
+                </g>
+                <g class="base-slice11">
+                  <use href="#he-shape" clip-path="url(#slice-11)" />
+                </g>
+                <g class="base-slice12">
+                  <use href="#he-shape" clip-path="url(#slice-12)" />
+                </g>
+                <g class="base-slice13">
+                  <use href="#he-shape" clip-path="url(#slice-13)" />
+                </g>
+              </svg>
+            </div>
+
             <!-- Subtitle -->
             <div class="h-subtitle">
               <span class="always-visible">Digital Designer&nbsp;</span>
